<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffccaa">

    <TextView
        android:id="@+id/checkpoint_number"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/checkpointNumber"
        android:textSize="30sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/challenge_failure"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/challengeFailure"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_marginBottom="200dp"
        />


    <Button
        android:id="@+id/challenge_again"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/challengeAgain"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="#996600"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/return_main"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/returnMain"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="#996600"
        />
</LinearLayout>